--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -46,9 +46,7 @@
 
         <!-- Lec Hours Column -->
         <ng-container matColumnDef="lec_hours">
-          <th mat-header-cell *matHeaderCellDef class="custom-header">
-            Lec
-          </th>
+          <th mat-header-cell *matHeaderCellDef class="custom-header">Lec</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.lec_hours }}
           </td>
@@ -56,9 +54,7 @@
 
         <!-- Lab Hours Column -->
         <ng-container matColumnDef="lab_hours">
-          <th mat-header-cell *matHeaderCellDef class="custom-header">
-            Lab
-          </th>
+          <th mat-header-cell *matHeaderCellDef class="custom-header">Lab</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.lab_hours }}
           </td>
@@ -75,7 +71,7 @@
         <!-- Tuition Hours Column -->
         <ng-container matColumnDef="tuition_hours">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
-            Tuition<br>Hours
+            Tuition<br />Hours
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.tuition_hours }}
@@ -86,13 +82,7 @@
         <ng-container matColumnDef="day">
           <th mat-header-cell *matHeaderCellDef class="custom-header">Day</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <button
-              mat-button
-              class="table-button"
-              (click)="openDialog('day', element)"
-            >
-              {{ element.day || "Select Day" }}
-            </button>
+            {{ element.day || "Not set" }}
           </td>
         </ng-container>
 
@@ -100,13 +90,7 @@
         <ng-container matColumnDef="time">
           <th mat-header-cell *matHeaderCellDef class="custom-header">Time</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <button
-              mat-button
-              class="table-button"
-              (click)="openDialog('time', element)"
-            >
-              {{ element.time || "Select Time" }}
-            </button>
+            {{ element.time || "Not set" }}
           </td>
         </ng-container>
 
@@ -116,13 +100,7 @@
             Professor
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <button
-              mat-button
-              class="table-button"
-              (click)="openDialog('professor', element)"
-            >
-              {{ element.professor || "Select Professor" }}
-            </button>
+            {{ element.professor || "Not set" }}
           </td>
         </ng-container>
 
@@ -130,12 +108,23 @@
         <ng-container matColumnDef="room">
           <th mat-header-cell *matHeaderCellDef class="custom-header">Room</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
+            {{ element.room || "Not set" }}
+          </td>
+        </ng-container>
+
+        <!-- Action Column -->
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">
+            Action
+          </th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
             <button
               mat-button
-              class="table-button"
-              (click)="openDialog('room', element)"
+              class="edit-button"
+              (click)="openEditDialog(element)"
             >
-              {{ element.room || "Select Room" }}
+              <mat-icon>edit</mat-icon>
+              <span>Edit</span>
             </button>
           </td>
         </ng-container>
