--- a/frontend/src/app/shared/table-header/table-header.component.html
+++ b/frontend/src/app/shared/table-header/table-header.component.html
@@ -56,9 +56,9 @@
   <!--Objects-->
   <div class="object-container">
     @if (showActiveYearAndSem) {
-      <div class="active-year-sem-container">
-          <p class="text">A.Y. 2024-2025, 1st Semester</p>
-          <p class="label">Active Year & Semester</p>
+      <div class="active-year-sem-container" (click)="onActiveYearSemClick()">
+        <p class="text">A.Y. {{activeYear}}, {{activeSemester}}</p>
+        <p class="label">Active Year & Semester</p>
       </div>
     }
   </div>
