--- a/frontend/src/app/shared/table-header/table-header.component.html
+++ b/frontend/src/app/shared/table-header/table-header.component.html
@@ -1,55 +1,36 @@
 <div class="header-container">
   <!-- Search Input -->
   <form [formGroup]="form" class="input-container">
-    @for (field of inputFields; track field.key) { @if (field.type === 'text') {
-    <mat-form-field
-      appearance="fill"
-      class="search-field"
-      subscriptSizing="dynamic"
-    >
-      <mat-label>{{ field.label }}</mat-label>
-      <input
-        matInput
-        [formControlName]="field.key"
-        [placeholder]="field.placeholder || ''"
-      />
-      <mat-icon matPrefix>search</mat-icon>
-    </mat-form-field>
-    } @if (field.type === 'select') {
-    <mat-form-field
-      appearance="fill"
-      class="select-field"
-      [ngClass]="{
-        'program-field': field.key === 'program',
-        'year-level-field': field.key === 'yearLevel',
-        'curriculum-field': field.key === 'curriculum',
-        'sections-field': field.key === 'sections'
-      }"
-      subscriptSizing="dynamic"
-    >
-      <mat-label>{{ field.label }}</mat-label>
-      <mat-select [formControlName]="field.key">
-        @for (option of field.options; track option) {
-        <mat-option [value]="option">
-          {{ option }}
-        </mat-option>
-        }
-      </mat-select>
-    </mat-form-field>
-    } @else if (field.type === 'section') {
-    <mat-form-field
-      appearance="fill"
-      class="section-field"
-      [ngClass]="{ 'sections-field': field.key === 'sections' }"
-      subscriptSizing="dynamic"
-    >
-      <mat-label>{{ field.label }}</mat-label>
-      <mat-icon matPrefix (click)="decrementSection(field)">remove</mat-icon>
-      <input matInput [formControlName]="field.key" readonly />
-      <mat-icon matSuffix (click)="incrementSection(field)">add</mat-icon>
-    </mat-form-field>
-    }
-    <!-- We can add more form field types here -->
+    @for (field of inputFields; track field.key) {
+      @if (field.type === 'text') {
+        <mat-form-field appearance="fill" class="search-field" subscriptSizing="dynamic">
+          <mat-label>{{ field.label }}</mat-label>
+          <input matInput [formControlName]="field.key" [placeholder]="field.placeholder || ''" />
+          <mat-icon matPrefix>search</mat-icon>
+        </mat-form-field>
+      } 
+      @if (field.type === 'select') {
+        <mat-form-field
+          appearance="fill"
+          class="select-field"
+          [ngClass]="{
+            'program-field': field.key === 'program',
+            'year-level-field': field.key === 'yearLevel',
+            'curriculum-field': field.key === 'curriculum',
+            'sections-field': field.key === 'sections'
+          }"
+          subscriptSizing="dynamic"
+        >
+          <mat-label>{{ field.label }}</mat-label>
+          <mat-select [formControlName]="field.key">
+            @for (option of field.options; track option) {
+              <mat-option [value]="option">
+                {{ option }}
+              </mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
+      }
     }
   </form>
 
@@ -57,7 +38,7 @@
   <div class="object-container">
     @if (showActiveYearAndSem) {
       <div class="active-year-sem-container" (click)="onActiveYearSemClick()">
-        <p class="text">A.Y. {{activeYear}}, {{activeSemester}}</p>
+        <p class="text">A.Y. {{ activeYear }}, {{ activeSemester }}</p>
         <p class="label">Active Year & Semester</p>
       </div>
     }
@@ -68,28 +49,23 @@
     <div class="button-container">
       <!-- Export to PDF Button -->
       @if (showExportButton) {
-      <button
-        mat-flat-button
-        class="custom-mat-button export-button"
-        (click)="onExport()"
-      >
-        <mat-icon>picture_as_pdf</mat-icon>
-        Export to PDF
-      </button>
+        <button mat-flat-button class="custom-mat-button export-button" (click)="onExport()">
+          <mat-icon>picture_as_pdf</mat-icon>
+          Export to PDF
+        </button>
       }
       <!-- Add Button -->
       @if (showAddButton) {
-      <button
-        mat-flat-button
-        class="custom-mat-button add-button"
-        [disabled]="buttonDisabled"
-        (click)="onAdd()"
-      >
-        <mat-icon>{{ addIconName }}</mat-icon>
-        {{ addButtonLabel }}
-      </button>
+        <button
+          mat-flat-button
+          class="custom-mat-button add-button"
+          [disabled]="buttonDisabled"
+          (click)="onAdd()"
+        >
+          <mat-icon>{{ addIconName }}</mat-icon>
+          {{ addButtonLabel }}
+        </button>
       }
     </div>
   }
-  
 </div>
