add delete and update course api to frontend

--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
@@ -27,7 +27,7 @@
     [tableHeadingButtonText]="'Add Course'"
     [tableHeadingButtonIcon]="'add'"
     (tableHeadingButtonClick)="onAddCourse(semester)"
-    (edit)="onEditCourse($event)"
+    (edit)="onEditCourse($event, semester)"
     (delete)="onDeleteCourse($event)"
   ></app-table-generic>
 </div>
