--- a/frontend/src/app/shared/table-dialog/table-dialog.component.scss
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.scss
@@ -15,6 +15,11 @@
       display: block;
       margin-bottom: var(--spacing-md);
     }
+
+    .academic-year-hint {
+      cursor: pointer;
+      color: var(--primary-text);
+    }
   }
 }
 
