add academic year addition

--- a/frontend/src/app/shared/table-header/table-header.component.html
+++ b/frontend/src/app/shared/table-header/table-header.component.html
@@ -31,6 +31,11 @@
             @if (field.key === 'section') {
               <mat-option (click)="addSection.emit()">Add section</mat-option>
             }
+            @if (field.key === 'academicYear') {
+              <mat-option (click)="onAddAcademicYearClick()">
+                Add Academic Year
+              </mat-option>
+            }
           </mat-select>
         </mat-form-field>
       }
