--- a/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
+++ b/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
@@ -10,6 +10,7 @@
       [showButtons]="true"
       (inputChange)="onInputChange($event)"
       (add)="openManageAcademicYearDialog()"
+      (addAcademicYear)="openAddAcademicYearDialog()"
       [selectedValues]="{ academicYear: selectedAcademicYear }"
     ></app-table-header>
   </div>
@@ -18,7 +19,7 @@
     <div class="table-container">
       <table mat-table [dataSource]="programs" class="custom-table">
         <ng-container matColumnDef="index">
-          <th mat-header-cell *matHeaderCellDef class="custom-header"> # </th>
+          <th mat-header-cell *matHeaderCellDef class="custom-header">#</th>
           <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
         </ng-container>
 
