--- a/frontend/src/app/shared/table-dialog/table-dialog.component.html
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.html
@@ -6,17 +6,24 @@
   <div mat-dialog-content class="table-dialog-content">
     <div *ngIf="data.isManageList" class="academic-year-list">
       <!-- Updated styling for each academic year item -->
-      <div class="academic-year-item" *ngFor="let year of data.academicYearList">
+      <div
+        class="academic-year-item"
+        *ngFor="let year of data.academicYearList"
+      >
         <span>{{ year }}</span>
         <!-- Replaced mat-icon-button with mat-icon and added styling class -->
-         
-        <button mat-button class="delete-acad-item" (click)="onDeleteYear(year)">
+
+        <button
+          mat-button
+          class="delete-acad-item"
+          (click)="onDeleteYear(year)"
+        >
           <mat-icon>delete</mat-icon>
           <span>Delete</span>
         </button>
       </div>
     </div>
-    
+
     @if (isExportDialog) {
     <form [formGroup]="form" class="dialog-form">
       <mat-radio-group formControlName="exportOption">
@@ -34,112 +41,143 @@
     </form>
     } @else {
     <form [formGroup]="form" class="dialog-form">
-      @if (data.useHorizontalLayout) {
-        @for (field of data.fields; track field; let i = $index) {
-          @if (i % 2 === 0) {
-            <div class="horizontal-field-container">
-              <mat-form-field class="form-field horizontal-field" appearance="fill">
-                <mat-label>{{ field.label }}</mat-label>
-                <ng-container [ngSwitch]="field.type">
-                  <input *ngSwitchCase="'text'" matInput [formControlName]="field.formControlName" [attr.disabled]="field.disabled ? '' : null" [maxlength]="field.maxLength ?? null" />
-                  <input *ngSwitchCase="'number'" matInput type="number" [formControlName]="field.formControlName" [attr.disabled]="field.disabled ? '' : null" [min]="field.min ?? null" [max]="field.max ?? null" />
-                  <mat-select *ngSwitchCase="'select'" [formControlName]="field.formControlName">
-                    @for (option of field.options; track option) {
-                      <mat-option [value]="option">{{ option }}</mat-option>
-                    }
-                  </mat-select>
-                </ng-container>
-                <mat-error>{{ getErrorMessage(field.formControlName, field.label) }}</mat-error>
-              </mat-form-field>
-              
-              @if (i + 1 < data.fields.length) {
-                <mat-form-field class="form-field horizontal-field" appearance="fill">
-                  <mat-label>{{ data.fields[i + 1].label }}</mat-label>
-                  <ng-container [ngSwitch]="data.fields[i + 1].type">
-                    <input *ngSwitchCase="'text'" matInput [formControlName]="data.fields[i + 1].formControlName" [attr.disabled]="data.fields[i + 1].disabled ? '' : null" [maxlength]="data.fields[i + 1].maxLength ?? null" />
-                    <input *ngSwitchCase="'number'" matInput type="number" [formControlName]="data.fields[i + 1].formControlName" [attr.disabled]="data.fields[i + 1].disabled ? '' : null" [min]="data.fields[i + 1].min ?? null" [max]="data.fields[i + 1].max ?? null" />
-                    <mat-select *ngSwitchCase="'select'" [formControlName]="data.fields[i + 1].formControlName">
-                      @for (option of data.fields[i + 1].options; track option) {
-                        <mat-option [value]="option">{{ option }}</mat-option>
-                      }
-                    </mat-select>
-                  </ng-container>
-                  <mat-error>{{ getErrorMessage(data.fields[i + 1].formControlName, data.fields[i + 1].label) }}</mat-error>
-                </mat-form-field>
+      @if (data.useHorizontalLayout) { @for (field of data.fields; track field;
+      let i = $index) { @if (i % 2 === 0) {
+      <div class="horizontal-field-container">
+        <mat-form-field class="form-field horizontal-field" appearance="fill">
+          <mat-label>{{ field.label }}</mat-label>
+          <ng-container [ngSwitch]="field.type">
+            <input
+              *ngSwitchCase="'text'"
+              matInput
+              [formControlName]="field.formControlName"
+              [attr.disabled]="field.disabled ? '' : null"
+              [maxlength]="field.maxLength ?? null"
+            />
+            <input
+              *ngSwitchCase="'number'"
+              matInput
+              type="number"
+              [formControlName]="field.formControlName"
+              [attr.disabled]="field.disabled ? '' : null"
+              [min]="field.min ?? null"
+              [max]="field.max ?? null"
+            />
+            <mat-select
+              *ngSwitchCase="'select'"
+              [formControlName]="field.formControlName"
+            >
+              @for (option of field.options; track option) {
+              <mat-option [value]="option">{{ option }}</mat-option>
               }
-            </div>
-          }
-        }
-      } @else {
-        @for (field of data.fields; track field) {
-          @switch (field.type) {
-            @case ('checkbox') {
-              <mat-checkbox [formControlName]="field.formControlName" class="checkbox">
-                {{ field.label }}
-              </mat-checkbox>
-            }
-            @default {
-              <mat-form-field class="form-field" appearance="fill">
-                <mat-label>{{ field.label }}</mat-label>
+            </mat-select>
+          </ng-container>
+          <mat-error>{{
+            getErrorMessage(field.formControlName, field.label)
+          }}</mat-error>
+        </mat-form-field>
 
-                @switch (field.type) {
-                  @case ('text') {
-                    <input
-                      matInput
-                      [formControlName]="field.formControlName"
-                      [maxlength]="field.maxLength ?? null"
-                    />
-                  }
-                  @case ('number') {
-                    <input
-                      matInput
-                      type="number"
-                      appTwoDigitInput
-                      [formControlName]="field.formControlName"
-                      [min]="field.min ?? null"
-                      [max]="field.max ?? null"
-                    />
-                  }
-                  @case ('select') {
-                    <mat-select [formControlName]="field.formControlName">
-                      @for (option of field.options; track option) {
-                        <mat-option [value]="option">
-                          {{ option }}
-                        </mat-option>
-                      }
-                    </mat-select>
-                  }
-                  @case ('autocomplete') {
-                    <input
-                      type="text"
-                      matInput
-                      [formControlName]="field.formControlName"
-                      [matAutocomplete]="auto"
-                      (input)="filterOptions(field)"
-                    />
-                    <mat-autocomplete #auto="matAutocomplete">
-                      @for (option of filteredOptions[field.formControlName]; track option) {
-                        <mat-option [value]="option">
-                          {{ option }}
-                        </mat-option>
-                      }
-                    </mat-autocomplete>
-                  }
-                }
-                <mat-error>{{ getErrorMessage(field.formControlName, field.label) }}</mat-error>
-                @if (field.formControlName === 'academicYear') {
-                  <mat-hint>
-                    <span class="academic-year-hint" (click)="navigateToAcademicYear()">Manage Academic Years</span>
-                  </mat-hint>
-                }
-                @if (field.hint) {
-                  <mat-hint>{{ field.hint }}</mat-hint>
-                }
-              </mat-form-field>
-            }
-          }
+        @if (i + 1 < data.fields.length) {
+        <mat-form-field class="form-field horizontal-field" appearance="fill">
+          <mat-label>{{ data.fields[i + 1].label }}</mat-label>
+          <ng-container [ngSwitch]="data.fields[i + 1].type">
+            <input
+              *ngSwitchCase="'text'"
+              matInput
+              [formControlName]="data.fields[i + 1].formControlName"
+              [attr.disabled]="data.fields[i + 1].disabled ? '' : null"
+              [maxlength]="data.fields[i + 1].maxLength ?? null"
+            />
+            <input
+              *ngSwitchCase="'number'"
+              matInput
+              type="number"
+              [formControlName]="data.fields[i + 1].formControlName"
+              [attr.disabled]="data.fields[i + 1].disabled ? '' : null"
+              [min]="data.fields[i + 1].min ?? null"
+              [max]="data.fields[i + 1].max ?? null"
+            />
+            <mat-select
+              *ngSwitchCase="'select'"
+              [formControlName]="data.fields[i + 1].formControlName"
+            >
+              @for (option of data.fields[i + 1].options; track option) {
+              <mat-option [value]="option">{{ option }}</mat-option>
+              }
+            </mat-select>
+          </ng-container>
+          <mat-error>{{
+            getErrorMessage(
+              data.fields[i + 1].formControlName,
+              data.fields[i + 1].label
+            )
+          }}</mat-error>
+        </mat-form-field>
         }
-      }
+      </div>
+      } } } @else { @for (field of data.fields; track field) { @switch
+      (field.type) { @case ('checkbox') {
+      <mat-checkbox [formControlName]="field.formControlName" class="checkbox">
+        {{ field.label }}
+      </mat-checkbox>
+      } @default {
+      <mat-form-field class="form-field" appearance="fill">
+        <mat-label>{{ field.label }}</mat-label>
+
+        @switch (field.type) { @case ('text') {
+        <input
+          matInput
+          [formControlName]="field.formControlName"
+          [maxlength]="field.maxLength ?? null"
+        />
+        } @case ('number') {
+        <input
+          matInput
+          type="number"
+          appTwoDigitInput
+          [formControlName]="field.formControlName"
+          [min]="field.min ?? null"
+          [max]="field.max ?? null"
+        />
+        } @case ('select') {
+        <mat-select [formControlName]="field.formControlName">
+          @for (option of field.options; track option) {
+          <mat-option [value]="option">
+            {{ option }}
+          </mat-option>
+          }
+        </mat-select>
+        } @case ('autocomplete') {
+        <input
+          type="text"
+          matInput
+          [formControlName]="field.formControlName"
+          [matAutocomplete]="auto"
+          (input)="filterOptions(field)"
+        />
+        <mat-autocomplete #auto="matAutocomplete">
+          @for (option of filteredOptions[field.formControlName]; track option)
+          {
+          <mat-option [value]="option">
+            {{ option }}
+          </mat-option>
+          }
+        </mat-autocomplete>
+        } }
+        <mat-error>{{
+          getErrorMessage(field.formControlName, field.label)
+        }}</mat-error>
+        @if (field.formControlName === 'academicYear') {
+        <mat-hint>
+          <span class="academic-year-hint" (click)="navigateToAcademicYear()"
+            >Manage Academic Years</span
+          >
+        </mat-hint>
+        } @if (field.hint) {
+        <mat-hint>{{ field.hint }}</mat-hint>
+        }
+      </mat-form-field>
+      } } } }
     </form>
     }
   </div>
