improve link description

--- a/frontend/src/app/shared/table-dialog/table-dialog.component.html
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.html
@@ -170,7 +170,7 @@
         @if (field.formControlName === 'academicYear') {
         <mat-hint>
           <span class="academic-year-hint" (click)="navigateToAcademicYear()"
-            >Manage Academic Years</span
+            >Click this to Manage Academic Years</span
           >
         </mat-hint>
         } @if (field.hint) {
