--- a/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
+++ b/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
@@ -19,8 +19,8 @@
     <div class="table-container">
       <table mat-table [dataSource]="programs" class="custom-table">
         <ng-container matColumnDef="index">
-          <th mat-header-cell *matHeaderCellDef class="custom-header">#</th>
-          <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+          <th mat-header-cell *matHeaderCellDef class="custom-header index">#</th>
+          <td mat-cell *matCellDef="let element; let i = index" class="index">{{ i + 1 }}</td>
         </ng-container>
 
         <ng-container matColumnDef="program_code">
