--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -23,8 +23,8 @@
       <table mat-table [dataSource]="schedules" class="custom-table">
         <!-- Index Column -->
         <ng-container matColumnDef="index">
-          <th mat-header-cell *matHeaderCellDef class="custom-header">#</th>
-          <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+          <th mat-header-cell *matHeaderCellDef class="custom-header index">#</th>
+          <td mat-cell *matCellDef="let element; let i = index" class="index">{{ i + 1 }}</td>
         </ng-container>
 
         <!-- Course Code Column -->
