--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -37,6 +37,10 @@
         color: var(--primary-text);
       }
     }
+
+    .index {
+      padding: 0 var(--spacing-md);
+    }
   
     .custom-header {
       text-wrap: nowrap;
