fix empty values bug on edit dialog

--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum.component.html
@@ -4,6 +4,7 @@
     <app-table-header
       [inputFields]="headerInputFields"
       [addButtonLabel]="'Add Curriculum'"
+      [showExportButton]=false
       (inputChange)="onInputChange($event)"
       (add)="openAddCurriculumDialog()"  
     ></app-table-header>
