--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -74,7 +74,7 @@
         <!-- Tuition Hours Column -->
         <ng-container matColumnDef="tuition_hours">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
-            Tuition<br />Hours
+            Tuition Hours
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.tuition_hours }}
