optimize academic year elements

--- a/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
+++ b/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
@@ -51,7 +51,7 @@
               class="edit-button"
               (click)="onManageYearLevels(element)"
             >
-              <mat-icon>edit</mat-icon>
+              <mat-icon>school</mat-icon>
               <span>Edit Year Levels</span>
             </button>
           </td>
@@ -67,7 +67,7 @@
               class="edit-button"
               (click)="onManageSections(element)"
             >
-              <mat-icon>edit</mat-icon>
+              <mat-icon>view_list</mat-icon>
               <span>Edit Sections</span>
             </button>
           </td>
