--- a/frontend/src/app/core/components/admin/main/main.component.scss
+++ b/frontend/src/app/core/components/admin/main/main.component.scss
@@ -215,15 +215,20 @@
     padding: var(--spacing-lg);
     overflow: auto;
     width: 100%;
+
+    &.reports-view {
+      padding: var(--spacing-lg) var(--spacing-lg) var(--spacing-xs)
+        var(--spacing-lg);
+    }
   }
 }
 
-@media (max-width:800px) {
+@media (max-width: 800px) {
   .sidenav-content {
-      padding: var(--spacing-lg);
+    padding: var(--spacing-lg);
 
-      .sidenav-main {
-        background: none;
-      }
+    .sidenav-main {
+      background: none;
+    }
   }
 }
