add initial header config for subreports component

--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -1,1 +1,11 @@
-<p>report-faculty works!</p>
+<div class="report-header" [@fadeAnimation]>
+  <app-table-header
+    [inputFields]="inputFields"
+    [showButtons]="false"
+    [showActiveYearAndSem]="true"
+    [activeYear]="activeYear"
+    [activeSemester]="activeSemester"
+    (activeYearSemClick)="onActiveYearSemClick()"
+    (inputChange)="onInputChange($event)"
+  ></app-table-header>
+</div>
