--- a/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
@@ -1,1 +1,9 @@
-<p>report-programs works!</p>
+<div class="report-header" [@fadeAnimation]>
+  <app-table-header
+    [inputFields]="inputFields"
+    [showActiveYearAndSem]="true"
+    [activeYear]="activeYear"
+    [activeSemester]="activeSemester"
+    [showButtons]="false"
+  ></app-table-header>
+</div>
