--- a/frontend/src/app/core/components/faculty/main/main.component.scss
+++ b/frontend/src/app/core/components/faculty/main/main.component.scss
@@ -43,7 +43,7 @@
 
     .university-name,
     .system-name {
-      font-family: "Trajan Pro";
+      font-family: var(--font-header);
       font-size: var(--font-size-md);
       font-weight: 600;
     }
