--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,6 +2,7 @@
 @import "styles/m3-theme.scss";
 @import "styles/theme";
 @import "styles/mixins";
+@import "styles/fonts.scss";
 
 @include mat.core();
 
