--- a/frontend/src/styles/error.scss
+++ b/frontend/src/styles/error.scss
@@ -34,7 +34,7 @@
 
   .university-name,
   .system-name {
-    font-family: "Trajan Pro", serif;
+    font-family: var(--font-header), serif;
     font-size: var(--font-size-md);
     font-weight: 600;
   }
