--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -102,10 +102,10 @@
           mat-flat-button
           class="custom-mat-button"
           [ngClass]="{
-            'button-enabled': loginForm.valid,
-            'button-disabled': !loginForm.valid
+            'button-enabled': loginForm.valid && !isLoading,
+            'button-disabled': !loginForm.valid || isLoading
           }"
-          [disabled]="loginForm.invalid"
+          [disabled]="loginForm.invalid || isLoading"
           (click)="onSubmit()"
         >
           @if(!isLoading) {
@@ -113,7 +113,11 @@
           } @if(!isLoading) {
           <mat-icon fontSet="material-icons-round">login</mat-icon>
           } @if(isLoading) {
-          <mat-spinner diameter="30" class="custom-spinner"></mat-spinner>
+          <mat-spinner
+            diameter="30"
+            strokeWidth="2.75"
+            class="custom-spinner"
+          ></mat-spinner>
           }
         </button>
       </div>
