--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -23,6 +23,7 @@
   --font-size-xs: 0.65rem;
   --font-size-sm: 0.875rem;
   --font-size-md: 1rem;
+  --font-size-mdx: 1.1rem;
   --font-size-lg: 1.25rem;
   --font-size-xl: 1.5rem;
   --font-size-2xl: 2rem;
