change dialog color

--- a/frontend/src/styles/m3-theme.scss
+++ b/frontend/src/styles/m3-theme.scss
@@ -75,7 +75,7 @@ $_palettes: (
     99: #fffbff,
     100: #ffffff,
     4: #120d0c,
-    6: #181211,
+    6:  #1f1f1f, // default: #181211
     12: #251e1d,
     17: #2f2827,
     22: #3b3332,
@@ -88,7 +88,7 @@ $_palettes: (
   neutral-variant: (
     0: #000000,
     10: #251917,
-    20: #2d2d2d, // #3b2d2b
+    20: #2d2d2d, // default: #3b2d2b
     25: #473836,
     30: #232323, // default: #534341
     35: #5f4f4c,
