add faculty details in main component

--- a/frontend/src/app/core/components/faculty/main/main.component.html
+++ b/frontend/src/app/core/components/faculty/main/main.component.html
@@ -28,8 +28,8 @@
 
     <div class="header-account">
       <div class="account-text">
-        <div class="account-name">PUP Taguig Faculty</div>
-        <div class="account-email">puptaguigfaculty&#64;pup.edu.ph</div>
+        <div class="account-name">{{ facultyName }}</div>
+        <div class="account-email">{{ facultyEmail }}</div>
       </div>
       <div class="profile-dropdown">
         <img
