--- a/frontend/src/app/core/components/faculty/main/main.component.scss
+++ b/frontend/src/app/core/components/faculty/main/main.component.scss
@@ -116,6 +116,7 @@
     gap: var(--spacing-lg);
 
     .account-text {
+      font-size: var(--font-size-mdx);
       text-align: right;
 
       .account-name {
